--- a/client/app/listagem/listagem.component.html
+++ b/client/app/listagem/listagem.component.html
@@ -4,6 +4,8 @@
 
 <div class="container">
 
+    <p *ngIf="mensagem.length" class="alert alert-info">{{mensagem}}</p>
+
     <div class="row">
         <div class="col-md-12">
             <form>
@@ -23,9 +25,10 @@
     </div> <!-- fim row -->
     <br>
     <div class="row">
-        <painel *ngFor="let foto of fotos | filtroPorTitulo:textoProcurado.value" titulo="{{foto.titulo}}" class="col-md-2">
+        <painel *ngFor="let foto of fotos | filtroPorTitulo: textoProcurado.value" titulo="{{foto.titulo | uppercase}}"  class="col-md-2">
             <foto titulo="{{foto.titulo}}" url="{{foto.url}}">
             </foto>
+            <button class="btn btn-danger btn-block" (click)="remove(foto)" >Remover</button>
         </painel>
     </div><!-- fim row -->
 </div>
