--- a/client/app/listagem/listagem.component.html
+++ b/client/app/listagem/listagem.component.html
@@ -25,14 +25,13 @@
     </div> <!-- fim row -->
     <br>
     <div class="row">
-        <painel *ngFor="let foto of fotos | filtroPorTitulo: textoProcurado.value" titulo="{{foto.titulo | uppercase}}"  class="col-md-2">
-    
+        <painel *ngFor="let foto of fotos | filtroPorTitulo:textoProcurado.value" titulo="{{foto.titulo | uppercase}}" class="col-md-2">
+                
             <a [routerLink]="['/cadastro', foto._id]">
-    
                 <foto titulo="{{foto.titulo}}" url="{{foto.url}}"></foto>
             </a>
-    
-            <button class="btn btn-danger btn-block" (click)="remove(foto)">Remover</button>
+            <br>
+            <botao nome="Remover" estilo="btn-danger btn-block" (acao)="remove(foto)"></botao>
         </painel>
     </div><!-- fim row -->
 </div>
