--- a/client/app/listagem/listagem.component.html
+++ b/client/app/listagem/listagem.component.html
@@ -25,13 +25,13 @@
     </div> <!-- fim row -->
     <br>
     <div class="row">
-        <painel *ngFor="let foto of fotos | filtroPorTitulo:textoProcurado.value" titulo="{{foto.titulo | uppercase}}" class="col-md-2">
-                
+        <painel #painel *ngFor="let foto of fotos | filtroPorTitulo: textoProcurado.value" titulo="{{foto.titulo | uppercase}}"  class="col-md-2">
             <a [routerLink]="['/cadastro', foto._id]">
                 <foto titulo="{{foto.titulo}}" url="{{foto.url}}"></foto>
             </a>
             <br>
-            <botao nome="Remover" estilo="btn-danger btn-block" (acao)="remove(foto)"></botao>
+            <botao nome="Remover" estilo="btn-danger btn-block" (acao)="modal.show()" [confirmacao]="false"></botao>
+            <modal #modal frase="Tem certeza que deseja remover esta foto?" (confirma)="remove(foto, painel)"></modal>
         </painel>
     </div><!-- fim row -->
 </div>
